# test-task-to-nanimai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  pyproject.toml
config/: settings.example.yaml
src/test_app/: runner.py
src/test_app/application/: application.py  config.py
src/test_app/application/interactors/: balance_interactor.py
src/test_app/application/provider/: gateways_provider.py  repo_provider.py
src/test_app/application/task/: task.py
src/test_app/domain/protocols/repo/: transaction_repo_protocol.py  user_repo.py  user_repo_protocol.py
src/test_app/domain/transaction/: model.py
src/test_app/domain/transaction/enums/: status_transaction_enum.py
src/test_app/domain/user/: model.py
src/test_app/gateways/: alchemy_gateway.py
src/test_app/infrastucture/common/base_entities/: singleton.py
src/test_app/infrastucture/database/models/: __init__.py  base.py  transaction.py  user.py
src/test_app/infrastucture/database/repo/: transaction_repo.py  user_repo.py
src/test_app/presentation/api/balance/: handler_get_balance.py
