[project]
name = "test-work-to-nanimai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
app = "support_bot.runner:run"

dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "dynaconf>=3.2.11",
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
